2009-01-02  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=23082

        Fix GIF animation by ensuring that the signature of
        startAnimation() in the base class matches the method in BitmapImage.

        Test: fast/backgrounds/animated-gif-as-background.html

        * platform/graphics/Image.h:
        (WebCore::Image::startAnimation):

git-svn-id: svn://svn.chromium.org/blink/trunk@39564 bbb929c8-8fbe-4397-9dbb-9b2b20218538