third_party/WebKit/WebCore/platform/graphics/Image.h
@@ -160,7 +160,7 @@ protected:
     virtual bool mayFillWithSolidColor() const { return false; }
     virtual Color solidColor() const { return Color(); }
     
-    virtual void startAnimation() { }
+    virtual void startAnimation(bool catchUpIfNecessary = true) { }
     
     virtual void drawPattern(GraphicsContext*, const FloatRect& srcRect, const AffineTransform& patternTransform,
                              const FloatPoint& phase, CompositeOperator, const FloatRect& destRect);
